# juftin-scripts

./: .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docker.yaml  docs.yaml  publish.yaml  release.yaml  tests.yaml
docs/: index.md
juftin_scripts/: _base.py  _cli.py  _version.py  code_browser.py
search/: search_index.json
tests/: __init__.py  test_cli.py
